--- a/css/navbar.css
+++ b/css/navbar.css
@@ -99,6 +99,7 @@
         right: 20px;
         transform: translateY(-60px);
         transition: all 0.5s ease;
+        z-index: -1;
     }
 
     .links li {
